# Island-Proc-Gen

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROGRESS.md  README.md  rust-toolchain.toml
crates/app/: Cargo.toml
crates/app/src/: camera.rs  camera_panel.rs  dock.rs  hex_inspect_panel.rs  lib.rs  main.rs  profiler_tab.rs  runtime.rs  save_io.rs  world_panel.rs
crates/app/src/headless/: compare.rs  executor.rs  mod.rs  output.rs  request.rs
crates/app/src/runtime/: events.rs  frame.rs  mod.rs  regen.rs  tabs.rs  view_mode.rs
crates/app/tests/: compute_backend.rs  compute_backend_parity.rs  save_io_roundtrip.rs  schema_compat.rs
crates/core/: Cargo.toml
crates/core/src/: field.rs  lib.rs  neighborhood.rs  pipeline.rs  preset.rs  save.rs  seed.rs  test_support.rs  validation.rs  world.rs
crates/core/src/pipeline/: compute.rs  mod.rs  timing.rs
crates/core/src/validation/: biome.rs  climate.rs  erosion.rs  hex.rs  hydro.rs  mod.rs
crates/data/: Cargo.toml
crates/data/benchmarks/sprint_4/: README.md  extract_summary.py  regen.sh
crates/data/benchmarks/sprint_4/post/cpu/: sprint_1a_baseline.csv  sprint_1b_acceptance.csv  sprint_2_erosion.csv  sprint_3_5_hex_surface.csv  sprint_3_sediment_climate.csv
crates/data/benchmarks/sprint_4/post/gpu/: sprint_1a_baseline.csv  sprint_1b_acceptance.csv  sprint_2_erosion.csv  sprint_3_5_hex_surface.csv  sprint_3_sediment_climate.csv
crates/data/benchmarks/sprint_4/pre/cpu/: sprint_1a_baseline.csv  sprint_1b_acceptance.csv  sprint_2_erosion.csv  sprint_3_5_hex_surface.csv  sprint_3_sediment_climate.csv
crates/data/golden/: README.md  seeds.ron
crates/data/golden/headless/: README.md
crates/data/golden/headless/sprint_1a_baseline/: request.ron  summary.ron
crates/data/golden/headless/sprint_1a_baseline/shots/hero_caldera_seed123/: metrics.ron
crates/data/golden/headless/sprint_1a_baseline/shots/hero_caldera_seed42/: metrics.ron
crates/data/golden/headless/sprint_1a_baseline/shots/hero_caldera_seed777/: metrics.ron
crates/data/golden/headless/sprint_1a_baseline/shots/hero_volcanic_single_seed123/: metrics.ron
crates/data/golden/headless/sprint_1a_baseline/shots/hero_volcanic_single_seed42/: metrics.ron
crates/data/golden/headless/sprint_1a_baseline/shots/hero_volcanic_single_seed777/: metrics.ron
crates/data/golden/headless/sprint_1a_baseline/shots/hero_volcanic_twin_seed123/: metrics.ron
crates/data/golden/headless/sprint_1a_baseline/shots/hero_volcanic_twin_seed42/: metrics.ron
crates/data/golden/headless/sprint_1a_baseline/shots/hero_volcanic_twin_seed777/: metrics.ron
crates/data/golden/headless/sprint_1b_acceptance/: README.md  request.ron  summary.ron
crates/data/golden/headless/sprint_1b_acceptance/shots/s00_baseline_default/: metrics.ron
crates/data/golden/headless/sprint_1b_acceptance/shots/s70_all_overlays_on/: metrics.ron
crates/data/golden/headless/sprint_1b_acceptance/shots/wind_0_soil_volcanic_single_seed42/: metrics.ron
crates/data/golden/headless/sprint_1b_acceptance/shots/wind_0_volcanic_single_seed42/: metrics.ron
crates/data/golden/headless/sprint_1b_acceptance/shots/wind_3pi_2_volcanic_single_seed42/: metrics.ron
crates/data/golden/headless/sprint_1b_acceptance/shots/wind_pi_2_volcanic_single_seed42/: metrics.ron
crates/data/golden/headless/sprint_1b_acceptance/shots/wind_pi_soil_volcanic_single_seed42/: metrics.ron
crates/data/golden/headless/sprint_1b_acceptance/shots/wind_pi_volcanic_single_seed42/: metrics.ron
crates/data/golden/headless/sprint_2_erosion/: request.ron  summary.ron
crates/data/golden/headless/sprint_2_erosion/shots/post_caldera_seed42/: metrics.ron
crates/data/golden/headless/sprint_2_erosion/shots/post_volcanic_twin_seed42/: metrics.ron
crates/data/golden/headless/sprint_2_erosion/shots/pre_caldera_seed42/: metrics.ron
crates/data/golden/headless/sprint_2_erosion/shots/pre_volcanic_single_seed42/: metrics.ron
crates/data/golden/headless/sprint_2_erosion/shots/pre_volcanic_twin_seed42/: metrics.ron
crates/data/golden/headless/sprint_3_5_hex_surface/: request.ron  summary.ron
crates/data/golden/headless/sprint_3_5_hex_surface/shots/continuous_volcanic_single_seed1337/: metrics.ron
crates/data/golden/headless/sprint_3_5_hex_surface/shots/hex_only_volcanic_caldera_young_seed9001/: metrics.ron
crates/data/golden/headless/sprint_3_sediment_climate/: request.ron  summary.ron
crates/data/golden/headless/sprint_3_sediment_climate/shots/post_caldera_seed42/: metrics.ron
crates/data/golden/snapshots/: seed_123_volcanic_twin.ron  seed_42_volcanic_single.ron  seed_777_caldera.ron
crates/data/presets/: caldera.ron  volcanic_caldera_young.ron  volcanic_eroded_ridge.ron  volcanic_single.ron  volcanic_twin.ron  volcanic_twin_old.ron
crates/data/src/: golden.rs  lib.rs  presets.rs
crates/data/tests/: golden_seed_regression.rs
crates/gpu/: Cargo.toml
crates/gpu/src/: context.rs  lib.rs
crates/gpu/src/compute/: buffers.rs  hillslope_pipeline.rs  mod.rs  stream_power_pipeline.rs  timestamp.rs
crates/render/: Cargo.toml
crates/render/src/: camera.rs  hex_river.rs  hex_surface.rs  lib.rs  noise.rs  overlay.rs  overlay_export.rs  overlay_render.rs  palette.rs  sky.rs  terrain.rs  viewport.rs
crates/render/src/overlay/: catalog.rs  mod.rs  range.rs  resolve.rs
crates/sim/: Cargo.toml
crates/sim/src/: hex_coast_class.rs  hex_projection.rs  invalidation.rs  lib.rs  validation_stage.rs
crates/sim/src/climate/: common.rs  fog.rs  mod.rs  precipitation.rs  precipitation_v3.rs  temperature.rs
crates/sim/src/compute/: cpu_backend.rs  mod.rs
crates/sim/src/ecology/: biome.rs  mod.rs  suitability.rs
crates/sim/src/geomorph/: coast_type.rs  coastal.rs  derived_geomorph.rs  erosion_outer_loop.rs  hillslope.rs  mod.rs  pit_fill.rs  sediment.rs  stream_power.rs  topography.rs
crates/sim/src/hydro/: accumulation.rs  basins.rs  flow_routing.rs  mod.rs  rivers.rs  soil_moisture.rs  water_balance.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  overlay_panel.rs  params_panel.rs  stats_panel.rs
(+730 files in other folders)
