[workspace]
members  = ["crates/*"]
resolver = "2"

[workspace.dependencies]
wgpu             = "29.0.1"
winit            = "0.30.13"
egui             = "0.34.1"
egui-wgpu        = "0.34.1"
egui-winit       = "0.34.1"
glam             = "0.32.1"
serde            = { version = "1.0.228", features = ["derive"] }
ron              = "0.12.1"
toml             = "1.1.2"
tracing          = "0.1.44"
tracing-subscriber = "0.3.23"
anyhow           = "1.0.102"
thiserror        = "2.0.18"
