[package]
name              = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
island_core = { path = "../core", package = "core" }
anyhow      = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
