[package]
name              = "core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde     = { workspace = true }
thiserror = { workspace = true }
anyhow    = { workspace = true }
tracing   = { workspace = true }
rand      = { workspace = true }
rand_pcg.workspace = true
