[package]
name              = "data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
island_core = { path = "../core", package = "core" }
serde     = { workspace = true }
ron       = { workspace = true }
thiserror = { workspace = true }
anyhow    = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
