[package]
name              = "gpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
island_core = { path = "../core", package = "core" }
wgpu        = { workspace = true }
winit       = { workspace = true }
anyhow      = { workspace = true }
bytemuck    = { workspace = true }
tracing     = { workspace = true }
pollster    = { workspace = true }
