[package]
name              = "render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
wgpu      = { workspace = true }
glam      = { workspace = true }
anyhow    = { workspace = true }
bytemuck  = { workspace = true }
gpu       = { path = "../gpu" }
