[package]
name              = "render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
wgpu      = { workspace = true }
glam      = { workspace = true }
anyhow    = { workspace = true }
bytemuck  = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
png       = { workspace = true }
gpu       = { path = "../gpu" }

[dev-dependencies]
tempfile = { workspace = true }
