[package]
name              = "render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
wgpu        = { workspace = true }
glam        = { workspace = true }
anyhow      = { workspace = true }
bytemuck    = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
png         = { workspace = true }
egui        = { workspace = true }
egui-wgpu   = { workspace = true }
gpu         = { path = "../gpu" }
island_core = { path = "../core", package = "core" }

[dev-dependencies]
tempfile = { workspace = true }
naga     = { version = "29.0.1", features = ["wgsl-in"] }
