[package]
name              = "ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
egui         = { workspace = true }
island_core  = { path = "../core", package = "core" }
render       = { path = "../render" }
